Fix the git username

--- a/.github/workflows/backup-actions.yml
+++ b/.github/workflows/backup-actions.yml
@@ -12,3 +12,4 @@ jobs:
           REMOTE: git@github.com:mahdiiix/CICD_test.git
           GIT_SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           GIT_SSH_NO_VERIFY_HOST: "true"
+          GIT_USERNAME: mahdiiix
